# django-ask-jenna

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  asgi.py  package-lock.json  package.json  pyproject.toml  webpack.config.js
.github/workflows/: test.yml
ask_jenna/: apps.py  ask_jenna.py  config.py  prompts.py
ask_jenna/cms/: schema.py
ask_jenna/management/commands/: plugin_schema.py
ask_jenna/static/ask_jenna/bundles/: bundle.admin.min.js  bundle.admin.min.js.map
ask_jenna/static/ask_jenna/css/: bundle.admin.min.css  bundle.admin.min.css.map
ask_jenna/templates/admin/: change_form.html
ask_jenna/templatetags/: ask_jenna.py
cms_mcp/: admin.py  apps.py  asgi.py  auth.py  cms_config.py  errors.py  helper.py  helpers.py  markdown.py  mcp_handlers.py  mcp_proxy.py  mcp_server.py  models.py  prompts.py
cms_mcp/migrations/: 0001_initial.py
cms_mcp/resources/: __init__.py  static.py
cms_mcp/tools/: __init__.py  create.py  media.py  pages.py  placeholder.py  plugins.py  pool.py  schema.py
docs/: Makefile  requirements.in  requirements.txt
docs/source/: conf.py  index.rst
docs/source/explanation/: architecture.rst  mcp-protocol.rst  prompt-discovery.rst
docs/source/how-to/: authentication.rst  custom-prompts.rst  dynamic-content.rst  mcp-server.rst  use-with-claude-desktop.rst
docs/source/reference/: mcp-mutation-tools.rst
docs/source/tutorials/: first-prompt.rst  getting-started.rst
private/css/: admin.css
private/js/: admin.ask_jenna.js  ask_jenna.js
tests/: settings.py
tests/mcp/: test_helper.py  test_markdown.py  test_models.py  test_prompts.py  test_resource_uri.py
