[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools", "setuptools-scm" ]

[project]
name = "django-ask-jenna"
description = "Adds generative AI support to django admin and django CMS"
readme = "README.rst"
license = { text = "BSD-3-Clause" }
maintainers = [
  { name = "Django CMS Association and contributors", email = "info@django-cms.org" },
]
authors = [
  { name = "Divio AG", email = "info@divio.ch" },
]
requires-python = ">=3.10"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Framework :: Django CMS",
  "Framework :: Django CMS :: 4.1",
  "Framework :: Django CMS :: 5.0",
  "Framework :: Django CMS :: 5.1",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
]
dynamic = [ "version" ]
dependencies = [
  "Django",
  "beautifulsoup4",
  "lxml",
  "markdown",
  "mcp @ git+https://github.com/modelcontextprotocol/python-sdk@main",
]
urls.Homepage = "https://github.com/fsbraun/django-ask-jenna"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-django",
]

[tool.setuptools]
packages = [ "ask_jenna", "cms_mcp" ]

[tool.setuptools.dynamic]
version = { attr = "ask_jenna.__version__" }

[tool.setuptools.package-data]
ask_jenna = [ "static/**/*", "templates/**/*", "locale/**/*", "LICENSE", "README.rst" ]
exclude = [ "**/bundles/" ]

[tool.isort]
line_length = 119
skip = [
  "manage.py",
  "*migrations*",
  ".tox",
  ".eggs",
  ".env",
  ".venv",
  "data",
]
include_trailing_comma = true
multi_line_output = 5
lines_after_imports = 2
default_section = "THIRDPARTY"
sections = [
  "FUTURE",
  "STDLIB",
  "DJANGO",
  "CMS",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER",
]
known_first_party = "djangocms_link"
known_cms = [ "cms", "menus" ]
known_django = "django"

[tool.flake8]
max-line-length = 119
exclude = [
  "*.egg-info",
  ".eggs",
  ".env",
  ".git",
  ".settings",
  ".tox",
  ".venv",
  "build",
  "data",
  "dist",
  "docs",
  "*migrations*",
  "requirements",
  "tmp",
]

[tool.coverage.run]
branch = true
source = [ "djangocms_link" ]
omit = [
  "migrations/*",
  "tests/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
]
ignore_errors = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
addopts = "-ra"
